<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


<!--        <androidx.appcompat.widget.Toolbar-->

<!--            android:id="@+id/pagamento_appbar"-->
<!--&lt;!&ndash;            style="@style/botaoVoltar.Toolbar"&ndash;&gt;-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?actionBarSize"-->
<!--            app:navigationContentDescription="Voltar"-->
<!--            app:navigationIcon="@drawable/ic_action_botao_voltar" />-->


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/pagamento_informativo_cartao_credito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/informativo_cartao_credito"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_appbar" />

    <TextView
        android:id="@+id/pagamento_valor_da_camprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/valor_da_comprar"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_informativo_cartao_credito" />

    <TextView
        android:id="@+id/pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_green"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamento_valor_da_camprar"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valor_da_camprar"
        tools:text="@sample/pacotesViagens.json/pacotes/preco" />

    <EditText
        android:id="@+id/pagamento_numero_do_cartao_credito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints="phone"
        android:hint="@string/numero_do_cartao"
        android:inputType="phone"
        android:maxLength="16"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/pagamento_preco"
        app:layout_constraintTop_toBottomOf="@id/pagamento_preco" />

    <EditText
        android:id="@+id/pagamento_mes_do_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardNumber"
        android:digits="0123456789"
        android:hint="@string/mes_do_cartao"
        android:inputType="phone"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_do_cartao_credito"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_do_cartao_credito" />

    <EditText
        android:id="@+id/pagamento_ano_do_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardNumber"
        android:digits="0123456789"
        android:hint="@string/ano_do_cartao"
        android:inputType="phone"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_do_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_do_cartao_credito" />

    <EditText
        android:id="@+id/pagamento_codigo_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="creditCardNumber"
        android:digits="0123456789"
        android:drawableStart="@drawable/ic_action_codigo_cvc_cartao_credito"
        android:hint="@string/codigo_cvc"
        android:inputType="phone"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_ano_do_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_do_cartao_credito"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/pagamento_ano_do_cartao"
        app:layout_constraintTop_toTopOf="@id/pagamento_ano_do_cartao"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/pagamento_nome_do_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:digits="QqWwEeRrTtYyUuIiOoPp AaSsDdFfGgHhJjKkLlÇçZzXxCcVvBbNnMm"
        android:hint="@string/nome_do_cartao"
        android:inputType="textCapWords"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@id/pagamento_codigo_cvc"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_do_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_mes_do_cartao" />

    <Button
        android:id="@+id/pagamento_botao_finalizar_comprar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_botao_realizar_pagamento"
        android:text="@string/finalizar_compra"
        android:textAllCaps="false"
        android:textColor="#4E342E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_do_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_do_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_do_cartao" />
</androidx.constraintlayout.widget.ConstraintLayout>

