<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_pacote_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_pacote_imagem"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@drawable/sao_paulo_sp"
                android:contentDescription="@string/Banner" />

            <TextView
                android:id="@+id/item_pacote_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:padding="5dp"
                android:text="@string/sao_paulo"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/item_pacote_divisor_laranja"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_imagem"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/item_pacote_imagem"
                app:layout_constraintTop_toTopOf="@id/item_pacote_imagem"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/item_pacote_divisor_laranja"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@android:color/holo_orange_light"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_imagem"
                app:layout_constraintStart_toStartOf="@id/item_pacote_imagem"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_imagem" />

            <TextView
                android:id="@+id/item_pacote_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_imagem"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/item_pacote_local"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_divisor_laranja"
                tools:text="@string/dias" />

            <TextView
                android:id="@+id/item_pacote_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/item_pacote_imagem"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/item_pacote_dias"
                app:layout_constraintTop_toBottomOf="@id/item_pacote_dias"
                tools:text="@sample/pacotesViagens.json/pacotes/preco" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>